--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "706f08b4-c540-42d7-b5ca-fbc9b6a1eb75"
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -25,7 +26,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "primeflex/primeflex.css",
+              "primeicons/primeicons.css"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
